Update Google Drive API Key URL

--- a/interactive-ai/index.html
+++ b/interactive-ai/index.html
@@ -407,7 +407,7 @@
 <script>
     // ===== CONFIGURATION =====
     // Google Drive API Key URL (code.txt file)
-    const GDRIVE_API_KEY_URL = 'https://pastebin.com/raw/TyvBg7CQ';
+    const GDRIVE_API_KEY_URL = 'https://pastebin.com/raw/WD3Qf27x';
     
     const AI_NAME = 'P.H.A.R.T. AI Physical, Hardware, Artificial, Robotic, Technology';
     const ADMIN_CODE = 'admin123';
