--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <ul>
       <li><a href="https://21cookej.github.io/interactive-ai/">Interactive AI</a></li>
       <li><a href="https://21cookej.github.io/past-papers-gcse/">Past Paper Revision Links</a></li>
-      <li><a href="https://cool-launcher.vercel.app/">Eaglercraft Launcher</a></li>
+      <li><a href="https://cool-launcher2.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/grindcraft">Grind Craft</a></li>
       <li><a href="https://21cookej.github.io/best-games/projects/">Best games</a></li>
       <li><a href="https://21cookej.github.io/edgenotfound">EdgeNotFound</a></li>
@@ -193,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
