--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
       <li><a href="https://cool-launcher2.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/grindcraft">Grind Craft</a></li>
       <li><a href="https://21cookej.github.io/edgenotfound">EdgeNotFound</a></li>
+      <li><a href="https://21cookej.github.io/trading/">Trading and Exchange</a></li>
       <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
       <li><a href="https://movie-web-better.vercel.app/">Movie Website</a></li>
       <li><a href="https://21cookej.github.io/pixel">Sand Tetris</a></li>
@@ -192,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
